--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "smarty/smarty": "~3.1"
+        "smarty/smarty": "~3.1",
+        "squizlabs/php_codesniffer": "2.*"
     },
     "autoload": {
         "psr-4": {"Evnts\\Adm\\": "core/"}
